--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,6 @@
     <!-- CSS (from rosettatype.github.io) -->
     <link rel="stylesheet" href="http://github.rosettatype.com/assets/styles.css">
 
-    <!-- Icons (from rosettatype.com) -->
-    <link href="https://www.rosettatype.com/favicon.ico?v2" rel="shortcut icon" sizes="64x64" type="image/vnd.microsoft.icon" />
-    <link href="https://www.rosettatype.com/apple-touch-57x57.png?v2" rel="apple-touch-icon" type="image/vnd.microsoft.icon" />
-
 </head>
 
 <body>
@@ -64,5 +60,16 @@
       </div>
     </div>
   </div>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-7870352-8', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
