--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,5 +26,6 @@ home: true
 		{% endif %}
 
 	{% endfor %}
+	</div>
 <div><!-- needs to be here for the templates to nest properly -->
 {% endif %}
