--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,20 +11,21 @@ home: true
 
 	<div class="divider"></div>
 	<div class="row">
-
+	
 	{% for article in site.articles %}
+		{% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
 		<div class="span six">
 			<h3>{{ article.title }}</h3>
 			<p>{{ article.description }}</p>
 			<a class="secondary" href="{{ article.link }}">Read more</a>
 		</div>
-		{% if forloop.index == 2 %}
-			</div>
-			<div class="divider"></div>
-			<div class="row">
+		{% if thecycle == 'even' and not forloop.last %}
+	</div>
+	<div class="divider"></div>
+	<div class="row">
 		{% endif %}
 	{% endfor %}
-	
+
 	</div>
 <div><!-- needs to be here for the templates to nest properly -->
 {% endif %}
