--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ home: true
 			<p>{{ article.description }}</p>
 			<a class="secondary" href="{{ article.link }}">Read more</a>
 		</div>
-		{% if thecycle == 'even' and not forloop.last %}
+		{% if thecycle == 'even' and forloop.index != forloop.length %}
 	</div>
 	<div class="divider"></div>
 	<div class="row">
