--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
     <!-- CSS (from rosettatype.github.io) -->
     <link rel="stylesheet" href="http://github.rosettatype.com/assets/styles.css">
 
+    <script async defer data-domain="github.rosettatype.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
 
 <body>
@@ -60,16 +61,5 @@
       </div>
     </div>
   </div>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-7870352-8', 'auto');
-      ga('send', 'pageview');
-
-    </script>
 </body>
 </html>
