Changed htt to https

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <meta name="description" content="{{ site.description }}">
 
     <!-- CSS (from rosettatype.github.io) -->
-    <link rel="stylesheet" href="http://github.rosettatype.com/assets/styles.css">
+    <link rel="stylesheet" href="https://github.rosettatype.com/assets/styles.css">
 
     <script async defer data-domain="github.rosettatype.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
@@ -25,9 +25,9 @@
 <body>
   <div class='navbar fixed'>
      <div class='container'>
-        <a href="http://rosettatype.com" class='pull-left logo'>Rosetta</a>
+        <a href="https://rosettatype.com" class='pull-left logo'>Rosetta</a>
         <ul class='pull-right'>
-           <li><a href='http://rosettatype.com'>Website</a></li>
+           <li><a href='https://rosettatype.com'>Website</a></li>
            <li><a href='{{ site.github.repository_url }}'>GitHub</a></li>
            <li><a href='https://www.rosettatype.com/contact'>Contact</a></li>
         </ul>
