--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,26 +6,13 @@ home: true
 {{ content }}
 
 {% if site.articles %}
-</div>
-</div>
-
-	<div class="divider"></div>
-	<div class="row">
 	
 	{% for article in site.articles %}
-		{% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
-		<div class="span six">
-			<h3>{{ article.title }}</h3>
-			<p>{{ article.description }}</p>
-			<a class="secondary" href="{{ article.link }}">Read more</a>
-		</div>
-		{% if thecycle == 'even' and forloop.index != forloop.length %}
-	</div>
-	<div class="divider"></div>
-	<div class="row">
-		{% endif %}
+	<section>
+		<h2>{{ article.title }}</h2>
+		<p>{{ article.description }}</p>
+		<a class="button large cta" href="{{ article.link }}">Read more</a>
+	</section>
 	{% endfor %}
 
-	</div>
-<div><!-- needs to be here for the templates to nest properly -->
 {% endif %}
