--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -2,7 +2,7 @@
 ---
 
 // Load the dark/light themes
-@import "themes";
+//@import "themes";
 
 // The overall design system
 @import "rosetta-ds/rosetta-ds";
